--- a/spin.css
+++ b/spin.css
@@ -1,27 +1,10 @@
-.spin {
-    background-position: 100% 100%;
-    background-size: 50% 50%;
-    height: 100%;
-}
-
-    .spin::before,
-    .spin::after {
-    content: '';
-    display: block;
-    background-color: firebrick;
+div {
+    height: 100px;
+    width: 100px;
+    background-color: hsl(0, 0%, 0%);
     position: absolute;
-    }
-
-    .spin::before {
-        width: 100%;
-        height: 1px;
-        left: 0;
-        z-index: 1;
-    }
-
-    .spin::after {
-        height: 100%;
-        left: 50%;
-        width: 1px;
-        transform: translate( -50%);
-    }
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+}
