--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 .knob {
-    background-image: url("wheel.jpg");
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
 }
