--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
-.knob {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50px;
+body {
+    text-align: center;
+    margin: auto;
+    background-color: tomato;
 }
+
+.luckywheel {
+    width: 80%;
+    margin: 40px auto;
+}
+
+.btn,
+.btn:visited {
+    font-weight: 800;
+    margin: 10px;
+    height: 40px;
+    width: 140px;
+    box-shadow: 4px 4px 20px 0 #cc4c45;
+    border-radius: 0;
+    border: 2px solid #000;
+    background-color: #fff;
+    color: #000;
+}
+
+    .btn:hover,
+    .btn:active {
+        color: #fff;
+        background-color: #000;
+        border: none;
+        text-decoration: none;
+        box-shadow: 4px 4px 5px 0 #cc4c45;
+    }
