--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,7 @@ body {
 	border-radius:10px;
 	box-shadow:0px 0px 10px 0px #000;
 	position:absolute;
+    	z-index:1;
 }
 
 .logo img{
@@ -40,6 +41,8 @@ button {
   width: 250px;
 }
 #particles-js canvas {
+    position:absolute;
+    top:0;
     display: block;
     vertical-align: bottom;
     -webkit-transform: scale(1);
