--- a/css/game.css
+++ b/css/game.css
@@ -53,4 +53,15 @@ button {
     cursor: pointer;
     width: 250px;
 }
-
+#particles-js canvas {
+    position: absolute;
+    top: 0;
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
