updated media queries

--- a/css/game.css
+++ b/css/game.css
@@ -179,6 +179,16 @@ input[type=range] {
     input[type=range]:focus::-ms-fill-upper {
         background: #0a92da;
     }
-
+@media screen and(min-width: 576px)and(max-width:992px) and (orientation: landscape){
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
 
 
