--- a/css/global.css
+++ b/css/global.css
@@ -59,11 +59,13 @@ button, .btn {
             padding:8px 20px;
             border: none;
             cursor: pointer;
-			text-decoration: none;
-			display:block;		
+	    text-decoration: none;
+            display:block;
+	    margin:10px;
+	
         }
 
-@media screen and(min-width: 576px)and(max-width:992px) and (orientation: landscape){
+@media screen and(min-width: 576px)and(max-width:992px){
 .bg{
 	background-size:300%;
 }
