--- a/css/game.css
+++ b/css/game.css
@@ -4,8 +4,12 @@ body {
     min-width:100%;
 }
 #image{
-    position:relative;
-    top:15vh;
+    position: relative;
+    top: 1em;
+    width: 100%;
+    max-height: 150px;
+    max-width: 600px;
+    margin: 0 auto;
 }
 #container {
     background: #fff;
